# p2p

Backend/: .env example  .gitignore  README.md  index.js  prompt_market.db  pyproject.toml
Backend/src/: .env-sample  config.py  constants.py  main.py
Backend/src/database/: __init__.py  db.py
Backend/src/impl/: LoggerImpl.py
Backend/src/middlewares/: cors.py
Backend/src/models/: __init__.py  schemas.py
Backend/src/router/: __init__.py  content_endpoints.py  test_endpoints.py  user_endpoints.py
Backend/src/services/: llm_service.py
Backend/src/services/atoma/: .idea  atoma_api.py  atoma_image.py  test.ipynb
Backend/src/services/contract/: .idea
Backend/src/services/openai/: openai_api.py
Backend/src/utils/: .idea
Contract/: .gitignore  Move.toml  index.js
Contract/sources/: ai_marketplace.move  utils.move
Contract/sources/test/: test_ai_marketplace.move
Frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  constants.ts  index.css  routes.info.txt
Frontend/src/components/dashboard/: ActivityItem.tsx  DashboardLayout.tsx  DashboardSidebar.tsx
Frontend/src/configs/: env.ts  networkConfig.ts
Frontend/src/lib/: sealUtils.ts  truncket.ts
Frontend/src/pages/: Index.tsx  contact.tsx  test.tsx
Frontend/src/services/: EncryptAndUpload.ts  MarketplaceService.ts  PromptService.ts
Frontend/src/utils/: formatAddress.ts  objectExplorer.ts
PromptMarketplace/src/exceptions/: http.exception.ts
PromptMarketplace/src/services/: http.client.ts
(+17 files in other folders)
